--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:regular,700,900);
-@import url(https://allfont.net/allfont.css?fonts=comic-sans-ms);
+@font-face {
+   font-family: 'Comic Sans MS';
+   src: url('../fonts/ComicSansMS.woff2') format('woff2'),
+		url('../fonts/ComicSansMS.woff') format('woff');
+   font-weight: normal;
+   font-style: normal;
+   font-display: swap;
+}
 
 /* Обнуление */
 *,
